--- a/index.html
+++ b/index.html
@@ -26,10 +26,7 @@
       <a href="#rate-card" class="rate-btn">View Rate Card</a>
     </div>
     <div class="hero-image">
-      <div class="portrait-frame">
-        <img src="/IMG_6918.jpg" alt="Kido at Forty Under Forty Conference" class="portrait-image">
-        <div class="portrait-glow"></div>
-      </div>
+      <img src="https://picsum.photos/400/500" alt="Random Professional Portrait" class="portrait-image">
     </div>
   </section>
   <section id="about" class="about">
