--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <a href="#rate-card" class="rate-btn">View Rate Card</a>
     </div>
     <div class="hero-image">
-      <img src="https://picsum.photos/400/500" alt="Random Professional Portrait" class="portrait-image">
+      <img src="IMG_6918.jpg" alt="Random Professional Portrait" class="portrait-image">
     </div>
   </section>
   <section id="about" class="about">
